--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=bookshelf
-google.books.api.key=${GOOGLE_BOOKS_API_KEY}
+GOOGLE_BOOK_API_KEY=AIzaSyAPn6jzY8Capk0Yc_IM9fIAxF8-RCqzGSw
 
 
