--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.application.name=bookshelf
 GOOGLE_BOOK_API_KEY=AIzaSyAPn6jzY8Capk0Yc_IM9fIAxF8-RCqzGSw
 jwt.secret=${JWT_SECRET:K7v9sG3zQe1p2Vn8Yx4Z0qLmR5t8uP1w2aB3cD4eF5g=}
 jwt.expiration-ms=3600000
+spring.data.mongodb.auto-index-creation=true
 
 
